2004-04-19  Derek Price  <derek@ximbiot.com>

	* libcvs.mak: Regenerated for "zlib/libz.dsp" change.
	(Patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-04-17  Derek Price  <derek@ximbiot.com>

	* libcvs.dsp, libcvs.dep, libcvs.mak: Move...
	* lib.dsp, lib.dep, lib.mak: ...here.
	(Patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-04-17  Derek Price  <derek@ximbiot.com>

	* LIB.dsp: Rename to...
	* lib.dsp: ...this.

2004-04-15  Derek Price  <derek@ximbiot.com>

	* lib.dsp: Set PROP BASE directories to projet standard
	has "Reset" function use project defaults.
	Change "..\lib\" paths to ".\" for consistency.
	* lib.mak: Regenerated for lib.dsp change.
	(Patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-04-15  Derek Price  <derek@ximbiot.com>

	* lib.dsp: Dropped "alloca.c" from project.
	* lib.dep: Regenerated for "lib.dsp" change.
	* lib.mak: Regenerated for "lib.dsp" change.
	(Patch from Conrad T. Pino <Conrad@Pino.com>.)

2004-04-15  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add LIB.dep.
	* Makefile.in: Regenerated.

2004-04-15  Derek Price  <derek@ximbiot.com>

	* lib.dsp: Update to compile fnmatch.
	* LIB.dep: New generated file.
	* lib.mak: Regenerated.
	(Patch from Conrad T. Pino <conrad@pino.com>.)

2004-04-14  Derek Price  <derek@ximbiot.com>

	Update to current fnmatch module from GNULIB.

	* Makefile.am (BUILT_SOURCES, EXTRA_DIST): Add fnmatch sources.
	(MOSTLYCLEANFILES): Initialize & add fnmatch & alloca headers.
	(libcvs_a_OBJECTS): Make dependent on $(FNMATCH_H).
	(fnmatch.h): New target.
	* fnmatch.h.in: Rename to...
	* fnmatch_.h: ...this.
	* fnmatch.c: New version from GNULIB.
	* fnmatch_loop.c: New file.
	* Makefile.in: Regenerated.

2004-04-14  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Remove lib.dep.
	* Makefile.in: Regenerated.

2004-04-07  Derek Price  <derek@ximbiot.com>

	* regex.c: Revise "FREE_VAR" macro to eliminate C4090/C4022 warnings
	in Windows build with Visual C++ 6.0 compiler.